--- a/eXtremal/resources/webpages/guides/install-apache.html
+++ b/eXtremal/resources/webpages/guides/install-apache.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <title>Installing Apache</title>
     </head>
-    <body>
+    <body id="content">
         <h1>Installing Apache</h1>
         Apache is a <span id="color-green">webserver</span>, which you can download and install <span id="italic">on many platforms.</span><br />
         Apache is opensource software, so you cn watch out a source code of Apache.<br />
