--- a/template.html
+++ b/template.html
@@ -1,8 +1,22 @@
 <html>
     <head>
+        <link rel="stylesheet" href="/eXtremal/resources/style/for_all.css">
         <meta charset="utf-8">
         <title></title>
     </head>
     <body>
+        <table id="container-content" border="1">
+            <tr class="hat">
+                <td colspan = "3" id="hat">p</td>
+            </tr>
+            <tr class="content">
+                <!--<td id="content-left">p</td>-->
+                <td id="content-center"></td>
+                <td id="content-right">p</td>
+            </tr>
+            <tr class="footer">
+                <td colspan="3" id="footer">p</td>
+            </tr>
+            </table>
     </body>
 <html>
