--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
                 One second...
             </title>
             <script>
-                window.location.href = "./eXtremal/index.html";
+                window.location.href = "./eXtremal/index.php";
             </script>
         </head>
     </html>
