--- a/eXtremal/resources/webpages/guides/install-apache-eng.html
+++ b/eXtremal/resources/webpages/guides/install-apache-eng.html
@@ -2,10 +2,10 @@
     <head>
         <link rel="stylesheet" href="/eXtremal/resources/style/for_all.css">
         <meta charset="utf-8">
-        <title></title>
+        <title>Installing Apache (eng) - Simple Blog</title>
     </head>
     <body>
-        <table id="container-content" border="1">
+        <table id="container-content">
             <tr class="hat">
                 <td colspan = "3" id="hat"><h1>Simple Blog</h1></td>
             </tr>
