--- a/eXtremal/index.html
+++ b/eXtremal/index.html
@@ -2,20 +2,21 @@
     <head>
         <link rel="stylesheet" href="/eXtremal/resources/style/for_all.css">
         <meta charset="utf-8">
-        <title></title>
+        <title>Relocating...</title>
+        <script>window.location.href = "/eXtremal/index.php"</script>
     </head>
     <body>
         <table id="container-content" border="1">
             <tr class="hat">
-                <td colspan = "3" id="hat"><h1>Simple Blog</h1></td>
+                <td colspan = "3" id="hat">p</td>
             </tr>
             <tr class="content">
                 <!--<td id="content-left">p</td>-->
-                <td id="content-center">Mans <span id="underline">neinteresants</span> blogs no IT pasaules.</td>
+                <td id="content-center"></td>
                 <td id="content-right">p</td>
             </tr>
             <tr class="footer">
-                <td colspan="3" id="footer"><span></span></td>
+                <td colspan="3" id="footer">p</td>
             </tr>
             </table>
     </body>
